--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,12 +1,10 @@
-/* styles/globals.scss */
-
 /* Variables */
 $font-stack: "Helvetica", sans-serif;
 $primary-color: #4caf50;
 $secondary-color: #ff5722;
-$background-color: #2c2c2c; /* Dark background */
-$card-background-color: #383838; /* Slightly lighter dark background for cards */
-$text-color: #f9f9f9; /* Light text color */
+$background-color: #2c2c2c;
+$card-background-color: #383838;
+$text-color: #f9f9f9;
 $border-radius: 5px;
 
 /* Mixins */
